--- a/styles.css
+++ b/styles.css
@@ -399,6 +399,81 @@ i{
   position: absolute;
   display: none;
 }
+
+.products-container{
+  display: flex;
+  row-gap: 20px;
+  margin-left: 50px;
+  margin: 40px;
+  gap: 40px;
+
+}
+.image-product-container{
+  width: 486px;
+  height: 608px;
+}
+.product-title{
+  font-size: 20px;
+  font-weight: 500;
+  margin-top: 20px;
+}
+.product-subtitle{
+  font-size: 20px;
+  font-weight: 400;
+  opacity: 0.5;
+  margin-top: 10px;
+}
+.product-price{
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 20px;
+}
+.product-content-size-title{
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  font-weight: 700;
+  margin-top: 20px;
+  width: 376px;
+  height: 24px;
+}
+.product-sizes-specific{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+.product-sizes-button{
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  margin-top: 20px;
+  background: none;
+  padding: 20px;
+  border-radius: 30px;
+  width: 400px;
+  font-weight: 700;
+  font-size: 18px;
+}
+.main{
+  background: #000;
+  color: #fff;
+}
+.product-content-image-one{
+  width: 70px;
+  height: auto;
+  display: flex;
+  gap: 10px;
+}
+.product-small img{
+  width: 60px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  gap: 10px;
+}
+
 @media screen and (max-width:700px) {
   body{
     overflow-x: hidden;
