just lost my images

--- a/styles.css
+++ b/styles.css
@@ -505,6 +505,10 @@ i{
   cursor: pointer;
   border: 1px solid #070707;
 }
+.pro-id{
+  display: flex;
+  gap: 20px;
+}
 
 
 @media screen and (max-width:700px) {
