--- a/styles.css
+++ b/styles.css
@@ -509,6 +509,24 @@ i{
   display: flex;
   gap: 20px;
 }
+.bag{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.add-to-cart-num{
+  background-color: red;
+  color: #fff;
+  width: 20px;
+  height: 20px; 
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 12px;
+  margin-right: 10px;
+  top: 0;
+}
 
 
 @media screen and (max-width:700px) {
